correcao da leitura de arquivos e busca de dados